@@ -1,3 +1,5 @@
+* [Bug 833] ignore whitespace at end of remote configuration lines
+* [Bug 1033] ntpdc/ntpq crash prompting for keyid on Windows
 * [Bug 1028] Support for W32Time authentication via Samba.
 * Mitigation and PPS/PPSAPI cleanup from Dave Mills.
 * Documentation updates from Dave Mills.
